--- a/DT102G_moment2.csproj
+++ b/DT102G_moment2.csproj
@@ -7,11 +7,12 @@
 
   <ItemGroup>
     <Content Remove="Views\Home\Index1.cshtml" />
-    <Content Remove="Views\Home\rules.cshtml" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.8" />
+    <PackageReference Include="Microsoft.AspNetCore.Session" Version="2.2.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
 </Project>
